--- a/src/app/pages/auth/components-auth/login/login.component.html
+++ b/src/app/pages/auth/components-auth/login/login.component.html
@@ -1,4 +1,34 @@
-<form [formGroup]="form" (ngSubmit)="onSubmit(model)">
-  <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
-  <button type="submit" class="btn btn-default">Submit</button>
-</form>
+<div class="content-form mt-3 mb-5">
+  <div class="login border-round-3xl pt-3 pb-2 border-white border-solid border-3 container relative">
+    <div class="logo absolute">
+      <img src="../../../../../assets/imgs/logo.png" alt="">
+    </div>
+      <div class="grid">
+        <div class="lg:col-6 col-12">
+          <div class="img-login">
+            <img src="../../../../../assets/imgs/atom-clothes.jpg" class="border-round-3xl" alt="atom">
+          </div>
+        </div>
+        <div class="lg:col-6 col-12">
+          <form  [formGroup]="contactLoginForm" (ngSubmit)="onSubmit()" class="h-full pt-8 w-6 mx-auto">
+            <h2 class="text-center text-5xl mb-2 mt-2"> Hello Again !</h2>
+            <p class="mb-6 text-center text-color"> Welcome Back You've been missed !</p>
+            <div class="field">
+              <input class="w-full pt-3 pb-3" type="email" pInputText  formControlName = "email"  name="email" placeholder="Email"/> 
+            </div>
+            <div class="field">
+              <input class="w-full pt-3 pb-3" type="password" pInputText  formControlName = "password"  name="password" placeholder="Enter Your Password"/>  
+            </div>
+            <p class="flex justify-content-end mt-4 mb-4"> <a href="#"> Recovery Password</a></p>
+            <button pButton type="submit" label="Sign In" class="w-full pt-3 pb-3" ></button>
+            <p class="Continue mt-8 text-center text-color"> Or Continue With</p>
+            <div class="social-media-login flex justify-content-around mt-6 align-content-center">
+              <a href="#"><img src="../../../../../assets/imgs/facebook.png" class="border-round-3xl" alt="atom"></a>
+              <a href="#"><img src="../../../../../assets/imgs/google.png" class="border-round-3xl" alt="atom"></a>
+              <a href="#"><img src="../../../../../assets/imgs/apple-black-logo.png" class="border-round-3xl" alt="atom"></a>
+            </div>
+          </form>
+        </div>
+      </div>
+  </div>
+</div>
