--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,32 @@
 @import '~primeng/resources/themes/lara-light-blue/theme.css';
 @import '~primeng/resources/themes/lara-light-blue/theme.css';
 @import '~primeflex/primeflex.css';
+@import './styles//varebales';
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+
+
+.container{
+  width: min(100% , 1420px);
+  margin-inline: auto;
+  padding-inline: 10px;
+}
+* , *::after , *::before{
+  box-sizing: border-box;
+}
+p{
+  margin: 0;
+}
+
+body{
+  margin: 0;
+  padding: 0;
+  background-color: var(--bodyColor);
+  font-family: 'Roboto Condensed', sans-serif;
+}
+a{
+  text-decoration: none;
+  color: var(--text);
+}
+.text-color{
+  color: var(--text);
+}
