--- a/src/app/pages/auth/components-auth/login/login.component.html
+++ b/src/app/pages/auth/components-auth/login/login.component.html
@@ -1,3 +1,4 @@
+<ngx-spinner type="ball-scale-multiple"></ngx-spinner>
 <div class="content-form mt-3 mb-5">
   <div class="login border-round-3xl pt-3 pb-2 border-white border-solid border-3 container relative">
     <div class="logo absolute">
