--- a/src/app/pages/dashboard/components-dashboard/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/components-dashboard/dashboard/dashboard.component.html
@@ -1,2 +1,7 @@
-<p>dashboard works!</p>
+<p-menubar  [model]="items">
+    <button pButton label="Logout" icon="pi pi-power-off"></button>
+    <ng-template pTemplate="start">
+        <img src="../../../../../assets/imgs/hady.jpg" alt="">
+    </ng-template>
+</p-menubar>
 
