--- a/src/app/pages/dashboard/components-dashboard/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/components-dashboard/dashboard/dashboard.component.html
@@ -4,4 +4,6 @@
         <img src="../../../../../assets/imgs/hady.jpg" alt="">
     </ng-template>
 </p-menubar>
-
+<p-sidebar [(visible)]="display" [showCloseIcon]="false">
+    Content
+</p-sidebar>
