--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,9 +8,8 @@
 
 
 .container{
-  width: min(100% , 1420px);
-  margin-inline: auto;
-  padding-inline: 10px;
+  width: min(100% , calc(100% - 15rem));
+  margin-inline-start: auto;
 }
 * , *::after , *::before{
   box-sizing: border-box;
