--- a/src/app/shared/layout/admin-layout/admin-layout.component.html
+++ b/src/app/shared/layout/admin-layout/admin-layout.component.html
@@ -2,12 +2,17 @@
 <p-sidebar [(visible)]="display" [showCloseIcon]="false">
     <p-panelMenu [model]="sidebarItems"></p-panelMenu>
 </p-sidebar>
-<div class="container">
-  <p-menubar  [model]="navbar">
-      <ng-template pTemplate="end">
-          <button pButton type="button" class="p-button-rounded  p-button-warning p-button-text"  icon="pi pi-bell"></button>
-          <p-avatar image="../../../../../assets/imgs/hady.jpg" shape="circle" size="large"></p-avatar>
-      </ng-template>
-  </p-menubar>
+<div class="container" [ngClass]="{toggled : display}">
+  <header>
+    <nav class="flex justify-content-between align-items-center pr-3 pl-3">
+      <div class="icon-menu">
+        <button pButton  (click)="toggleSideBar()"  type="button" icon="pi pi-align-left" class="p-button-rounded p-button-text"></button>
+      </div>
+      <div class="flex">
+        <button pButton type="button" class="p-button-rounded  p-button-warning p-button-text"  icon="pi pi-bell"></button>
+        <p-avatar image="../../../../../assets/imgs/hady.jpg" shape="circle" size="large"></p-avatar>
+      </div>
+    </nav>
+  </header>
   <router-outlet></router-outlet>
 </div>
