--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,15 +49,12 @@ body{
   }
 }
 
-.p-menubar{
-  .p-menubar-end{
-    display: flex;
+header{
+  nav{
+    background-color: var(--white);
+    box-shadow: 0 10px 30px 0 rgba(47, 60, 74, 0.08);
+    min-height: 70px;
   }
-  border-radius: 0;
-  background-color: var(--white);
-  box-shadow: 0 10px 30px 0 rgba(47, 60, 74, 0.08);
-  border: none;
-  min-height: 70px;
 }
 a{
   text-decoration: none;
