--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,10 +13,17 @@
   --text      : #6b6b6b;
 }
 
-
-.container{
-  width: min(100% , calc(100% - 15rem));
+.layout{
+  width: calc(100% - 15rem);
   margin-inline-start: auto;
+  transition: width 0.5s;
+  &.active{
+    width : 100%;
+  }
+}
+.container{
+  width: min(100% , calc(1420px - 10rem));
+  margin-inline: auto;
 }
 * , *::after , *::before{
   box-sizing: border-box;
