--- a/src/app/layout/admin-layout/admin-layout.component.html
+++ b/src/app/layout/admin-layout/admin-layout.component.html
@@ -8,7 +8,7 @@
     <ng-template pTemplate="footer">Footer Content</ng-template>
 </p-sidebar>
 <div class="layout" [ngClass]="{active : !display}">
-    <header>
+    <header class="mb-4">
       <nav class="flex justify-content-between align-items-center pr-3 pl-3">
         <div class="icon-menu">
           <button pButton  (click)="toggleSideBar()"  type="button" icon="pi pi-align-left" class="p-button-rounded p-button-text"></button>
@@ -20,6 +20,8 @@
       </nav>
     </header>
     <div class="container">
-      <router-outlet></router-outlet>
+        <router-outlet></router-outlet>
     </div>
-</div>
+  </div>
+
+
