--- a/src/app/layout/admin-layout/admin-layout.component.html
+++ b/src/app/layout/admin-layout/admin-layout.component.html
@@ -1,13 +1,14 @@
 
 <p-sidebar [(visible)]="display"
 [showCloseIcon]="false"
+[modal]="false"
 [transitionOptions]="'1ms'"
 >
     <ng-template pTemplate="header">Header Content</ng-template>
     <p-panelMenu [model]="sidebarItems"></p-panelMenu>
     <ng-template pTemplate="footer">Footer Content</ng-template>
-</p-sidebar>
-<div class="layout" [ngClass]="{active : !display}">
+</p-sidebar >
+  <div class="layout" [ngClass]="{active : !display}">
     <header class="mb-4">
       <nav class="flex justify-content-between align-items-center pr-3 pl-3">
         <div class="icon-menu">
