--- a/src/app/shared/components/blogs-table/blogs-table.component.html
+++ b/src/app/shared/components/blogs-table/blogs-table.component.html
@@ -1,3 +1,4 @@
+<app-shared-add-post-type [label]='label'></app-shared-add-post-type>
 <p-table
 [value]="Blogs" [lazy]="true"
 dataKey="id"[paginator]="true"
@@ -7,20 +8,19 @@ dataKey="id"[paginator]="true"
 >
     <ng-template pTemplate="header">
     <tr>
-      <th>Title</th>
-      <th>Details</th>
-      <th>Created_By</th>
-      <th>Created_Date</th>
-      <th>Updated_Date</th>
+      <th *ngFor="let key of keys"> {{key}}</th>
     </tr>
     </ng-template>
     <ng-template pTemplate="body" let-Blogs>
       <tr>
+        <td>{{Blogs.ID}}</td>
         <td>{{Blogs.Title | slice:0:25}}</td>
         <td>{{Blogs.Details | slice:0:25}}</td>
         <td>{{Blogs.Created_By}}</td>
+        <td>{{Blogs.Updated_By}}</td>
         <td>{{Blogs.Created_Date | date }}</td>
         <td>{{Blogs.Updated_Date | date }}</td>
       </tr>
   </ng-template>
 </p-table>
+
