--- a/src/app/shared/components/shared-add-post-type/shared-add-post-type.component.html
+++ b/src/app/shared/components/shared-add-post-type/shared-add-post-type.component.html
@@ -6,8 +6,8 @@
     <h1> Add New Blog </h1>
   </ng-template>
   <ng-template pTemplate="body">
-    <form [formGroup]="form" (ngSubmit)="onSubmit(model)" class="pt-5">
-      <formly-form [form]="form" [fields]="fields" [model]="model"></formly-form>
+    <form [formGroup]="form" (ngSubmit)="onSubmit(BlogModel)" class="pt-5">
+      <formly-form [form]="form" [fields]="fields" [model]="BlogModel" [options]="options"></formly-form>
       <p-button type="submit" class="btn btn-default"> Submit </p-button>
     </form>
   </ng-template>
